<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/inventryImageView"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/inventryTitleText"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:text="@string/title_label"
        android:gravity="center_vertical"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/inventryCountLinearLayout"
        app:layout_constraintStart_toEndOf="@+id/inventryImageView"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/inventryCountLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/inventryResidueText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inventry_residue"
            android:gravity="center"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/inventryCountText"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/inventry_count"
            android:gravity="center"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/inventryUnitText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inventry_unit"
            android:gravity="center"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/consumptionDateLinearLayout"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="8dp"
        android:gravity="right"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/inventryImageView"
        app:layout_constraintTop_toBottomOf="@+id/inventryTitleText">

        <TextView
            android:id="@+id/consumptionResidueText"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/inventry_residue" />

        <TextView
            android:id="@+id/consumptionUnitText"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:textSize="28sp"
            android:text="@string/consumption_date" />

        <TextView
            android:id="@+id/consumptionDateText"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/consumption_unit_date" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>